--- a/.bshrc
+++ b/.bshrc
@@ -17,16 +17,17 @@ echo "Defined keyword aliases: 'function' for 'defunc', 'when' for 'if'."
 # Import core framework modules
 # Assumes c_compiler.bsh and number.bsh are in a 'framework' directory
 # accessible via BSH_MODULE_PATH (e.g., ./framework/c_compiler.bsh)
+# Remember: sub path are accessible through dots: folder.file
 
 echo "Importing c_compiler module (framework.c_compiler)..."
-import framework.c_compiler #todo: check if framework. suffix is needed
+import c_compiler
 
 import core_operators
 
-import framework.string
+import string
 
 echo "Importing number module (framework.number)..."
-import framework.number
+import number
 
 import type
 
