--- a/.bshrc
+++ b/.bshrc
@@ -1,35 +1,37 @@
+# Default BSH Startup Script (.bshrc) - Rewritten for New Operator Handling
+# Executed when bsh starts. Defines core functions and aliases.
 # Default BSH Startup Script (.bshrc) - Enhanced
 # Executed when bsh starts. Defines core functions and aliases.
-
-echo "Executing .bshrc (v0.5 compatible)..."
+echo "Executing .bshrc (new operator model)..." #
 echo "Welcome to bsh - The Extensible Shell!"
 echo "------------------------------------"
 
 # --- Core Settings & Aliases ---
-$PS1 = "bsh-lex" # Prompt showing off lexical scope era!
+$PS1 = "bsh-dyn" # Prompt reflecting dynamic operators
+# Define some keyword aliases using the 'defkeyword' C-level command
+defkeyword defunc function  # Alias 'defunc' to 'function' [cite: 4]
+# defkeyword if when # 'when' alias example [cite: 4]
 
-# Define some keyword aliases using the new 'defkeyword' C-level command
-defkeyword defunc function  # Alias 'defunc' to 'function'
-defkeyword if     when    # Alias 'if' to 'when' (just an example)
+echo "Defined keyword aliases: 'function' for 'defunc'." #
 
-echo "Defined keyword aliases: 'function' for 'defunc', 'when' for 'if'."
+# --- Import Core Framework Modules ---
+# Assumes modules are in a directory accessible via BSH_MODULE_PATH.
+# Sub-paths can be accessed using dots, e.g., framework.c_compiler.
 
-# Import core framework modules
-# Assumes c_compiler.bsh and number.bsh are in a 'framework' directory
-# accessible via BSH_MODULE_PATH (e.g., ./framework/c_compiler.bsh)
-# Remember: sub path are accessible through dots: folder.file
+echo "Importing c_compiler module..." #
+import c_compiler # Provides def_c_lib [cite: 5]
 
-echo "Importing c_compiler module (framework.c_compiler)..."
-import c_compiler
+echo "Importing core_operators module (defines operators and __dynamic_op_handler)..." #
+import core_operators # NEW: Defines ops via 'defoperator' and __dynamic_op_handler [cite: 5]
 
-import core_operators
+echo "Importing string module..." #
+import string # Assumed for string utilities [cite: 5]
 
-import string
+echo "Importing number module (provides math actions)..." #
+import number # Provides math_add, bsh_unary_*, etc. [cite: 5]
 
-echo "Importing number module (framework.number)..."
-import number
-
-import type
+echo "Importing type module (for type system, if used by __dynamic_op_handler advanced forms)..." #
+import type # For type checking, potentially [cite: 5]
 
 echo "------------------------------------"
 
@@ -37,8 +39,7 @@ echo "------------------------------------"
 
 # Function to check if a variable's value is empty.
 # Usage: is_empty VAR_NAME_STRING RESULT_VAR_NAME
-# RESULT_VAR_NAME will be set to "true" or "false" in the caller's scope.
-function is_empty (var_name_str result_var) {
+function is_empty (var_name_str result_var) { # [cite: 7]
     $temp_val = $($var_name_str)
     if $temp_val == "" {
         $($result_var) = "true"
@@ -55,256 +56,149 @@ function scope_test (param1) {
     echo "Local_var (local): $local_var"
 
     is_empty param1 param_empty_res
-    echo "Is param1 empty? $param_empty_res"
+    echo "Is param1 empty? $param_empty_res" # [cite: 7, 8]
     echo "Global_var (from scope_test): $global_var_example"
     echo "--- end scope_test ---"
 }
 
 # --- Enhanced Control Structures ---
+# for_loop and c_for can remain largely the same as they use inc/dec or command execution.
+# The 'inc' and 'dec' keywords in bsh.c would now internally use the
+# __dynamic_op_handler for $var++ like logic if they were implemented that way,
+# or they might directly modify variables if they are simpler builtins.
+# Assuming 'inc $varname' and 'dec $varname' are simple builtins that directly
+# call math_add/math_sub on the variable's value and re-set it.
 
-# Define a 'for_loop' function
-# Usage: for_loop ITERATOR_VAR_NAME START_VAL END_VAL_EXCLUSIVE STEP_VAL "COMMAND_STRING_TO_EXECUTE"
-function for_loop (iterator start_val end_val step command_body) {
+function for_loop (iterator start_val end_val step command_body) { # [cite: 8]
     echo "FOR_LOOP: Iter '$iterator' from $start_val to $end_val (exclusive) step $step"
     $($iterator) = $start_val
 
-    if $step == "0" {
+    if $step == "0" { # [cite: 8]
         echo "FOR_LOOP Error: Step value cannot be zero."
-        return
+        return # [cite: 9]
     }
 
-    $is_positive_step = "true"
-    if $step < "0" { # Relies on shell's comparison logic
-        $is_positive_step = "false"
+    # Condition evaluation (e.g., $($iterator) < $end_val) will now go through __dynamic_op_handler
+    # if '<' is defined as an operator.
+    # The inc/dec calls on iterator also go through the new mechanism.
+    # For simplicity, let's assume inc/dec still work as commands or are handled.
+    # If inc/dec are BSH functions that call, e.g., `VAR=$($VAR + 1)`, that will use the new op handling.
+
+    $is_positive_step = "1" # Using "1" for true, "0" for false to align with math_gt etc.
+    #math_gt "$step" "0" step_is_pos_res # Example if math_gt sets a var
+    #if $step_is_pos_res == "0" { $is_positive_step = "0" }
+    # Simplified for now, assuming string comparison works for simple positive/negative numbers
+    if $step < "0" { # This comparison now uses __dynamic_op_handler [cite: 9]
+        $is_positive_step = "0"
     }
 
-    if $is_positive_step == "true" {
-        while $($iterator) < $end_val {
+    if $is_positive_step == "1" {
+        while $($iterator) < $end_val { # Comparison uses __dynamic_op_handler
             $command_body
-            $counter_for_step = "0"
-            while $counter_for_step < $step {
-                inc $($iterator)
-                inc counter_for_step
-            }
+            # Simple increment using the $iterator itself via __dynamic_op_handler
+            # This assumes 'inc' keyword or direct math can modify iterator based on step.
+            # For loop: $iterator = $($iterator) + $step
+            math_add "$($iterator)" "$step" "$iterator" # Re-assign to iterator
         }
     } else { # Negative step
-        # Simplified negative step: effectively step -1 for each iteration of the outer loop.
-        # A robust solution for arbitrary negative steps needs an 'abs' function or better string math.
-        # Example: if step is "-2", this loop will dec by 1 twice for each outer iteration.
-        # This part needs careful thought if arbitrary negative steps are critical.
-        # For now, we make abs_step_val positive.
-        $abs_step_val = $step # e.g. "-2"
-        if $is_positive_step == "false" {
-             # Crude way to get positive version for loop count
-             if $step == "-1" { $abs_step_val = "1" }
-             else if $step == "-2" { $abs_step_val = "2" }
-             else if $step == "-3" { $abs_step_val = "3" }
-             # Add more or use a string manipulation lib call if available:
-             # $(calllib string_lib remove_prefix $step "-" abs_step_val)
-             else { echo "FOR_LOOP: Warning - large negative steps might not work as expected without 'abs'."; $abs_step_val = "1"; } # Fallback
-        }
-
-        while $($iterator) > $end_val {
+        while $($iterator) > $end_val { # Comparison uses __dynamic_op_handler
             $command_body
-            $counter_for_step = "0"
-            while $counter_for_step < $abs_step_val {
-                 dec $($iterator)
-                 inc counter_for_step
-            }
+            math_add "$($iterator)" "$step" "$iterator" # Step is negative, so this subtracts
         }
     }
     echo "FOR_LOOP: Finished for '$iterator'."
 }
 
-# Helper functions for C-style for loop conditions
-function is_lt (op1 op2 result_var_name) { # op1 < op2 ?
-    if $op1 < $op2 { $($result_var_name) = "true" } else { $($result_var_name) = "false" }
-}
-function is_le (op1 op2 result_var_name) { # op1 <= op2 ?
-    if $op1 <= $op2 { $($result_var_name) = "true" } else { $($result_var_name) = "false" }
-}
 
-# Function for C-style for loop.
-# Usage: c_for "INIT_CMD" "CONDITION_CMD" "COND_RESULT_VAR_NAME" "INCREMENT_CMD" "BODY_CMD"
-function c_for (init_command condition_command condition_result_var increment_command body_command) {
-    echo "C_FOR: Initializing..."
-    $init_command
-    echo "C_FOR: Starting loop..."
-    $condition_command
-    while $($condition_result_var) == "true" {
-        $body_command
-        $increment_command
-        $condition_command
-    }
-    echo "C_FOR: Finished."
-}
+# --- JSON Handling (Conceptual Wrappers) ---
+# This part remains conceptual. If bsh.c now flattens JSON, these functions would
+# provide a BSH API to access those flattened variables.
+function json_get (base_json_var_name path_str result_var_name) { # [cite: 22]
+    echo "JSON_GET: Attempting to get path '$path_str' from flattened JSON var '$base_json_var_name'"
 
-# --- JSON Handling (Conceptual Wrappers - relies on number.bsh/c_compiler.bsh loaded libs) ---
-function json_get (json_var_name path_str result_var_name) {
-    echo "JSON_GET: Attempting to get path '$path_str' from JSON in variable '$json_var_name'"
-    $json_string_content = $($json_var_name)
+    # Assuming bsh.c created variables like:
+    # $base_json_var_name_TYPE = "JSON_OBJECT" or "JSON_ARRAY"
+    # $base_json_var_name_key = "value"
+    # $base_json_var_name_object_subkey = "another_value"
+    # $base_json_var_name_array_0 = "item1"
+    # $base_json_var_name_array_length = "3"
 
-    # This would ideally call a function from a JSON library loaded via c_compiler.bsh
-    # For example, if 'jsonlib' was compiled and loaded, and has a 'get_path' function:
-    # calllib jsonlib get_path "$json_string_content" "$path_str"
-    # $($result_var_name) = $LAST_LIB_CALL_OUTPUT
-    # if $LAST_LIB_CALL_STATUS != "0" { $($result_var_name) = "JSON_ERROR" }
+    # This BSH function needs to parse path_str (e.g., "key.subkey" or "array[0]")
+    # and construct the mangled variable name.
+    # Example for "key.subkey":
+    $mangled_var_name = "${base_json_var_name}_${path_str}" # Needs robust path to var name conversion
+    # Crude replacement for dot in path with underscore for flattened var access:
+    # (Requires a string replace function)
+    # string_replace "$path_str" "." "_" path_as_var_suffix
+    # $mangled_var_name = "${base_json_var_name}_$path_as_var_suffix"
 
-    # Simulation for now:
-    if $json_var_name == "my_sample_json" {
-        if $path_str == ".name" { $($result_var_name) = "SimulatedBSHName" }
-        else if $path_str == ".version" { $($result_var_name) = "Simulated0.5" }
-        else { $($result_var_name) = "PATH_NOT_FOUND_IN_SIMULATED_JSON" }
+    if $(is_var_defined $mangled_var_name) { # is_var_defined would be a new helper
+        $($result_var_name) = $($mangled_var_name)
     } else {
-        echo "JSON_GET: (Conceptual) Would call external tool/library for JSON in '$json_var_name'."
-        $($result_var_name) = "NOT_IMPLEMENTED_FOR_GENERAL_JSON"
+        $($result_var_name) = "JSON_PATH_NOT_FOUND"
     }
+    # This is highly simplified. A real json_get would need robust path parsing.
 }
 
 # --- Path Manipulation Example ---
-function add_to_path (new_dir_to_add) {
-    echo "ADD_TO_PATH: Adding '$new_dir_to_add' to PATH if not present."
-    $current_path = $PATH # Get current PATH (shell variable)
+# Stays largely the same, relies on shell's variable handling. [cite: 24]
 
-    # Basic check to avoid simple duplicates - a robust solution is harder in pure script
-    $temp_path_for_check = ":$current_path:"
-    $dir_to_check1 = ":$new_dir_to_add:"
-    $dir_to_check2 = "$new_dir_to_add:" # Start of path
-    $dir_to_check3 = ":$new_dir_to_add"  # End of path
-
-    # This string 'contains' check is conceptual without a built-in or lib function
-    # if $(string_contains "$temp_path_for_check" "$dir_to_check1") == "true" {
-    #    echo "'$new_dir_to_add' seems to be already in PATH."
-    #    return
-    # }
-    # A simple, less robust check:
-    if $current_path == $new_dir_to_add { # Only handles if PATH has one entry
-         echo "'$new_dir_to_add' is already the only entry in PATH."
-         return
-    }
-
-
-    if $current_path == "" {
-        $PATH = $new_dir_to_add
-    } else {
-        $PATH = "$new_dir_to_add:$current_path" # Prepend
-    }
-    echo "ADD_TO_PATH: New PATH: $PATH"
-    # Note: This updates the shell's $PATH variable.
-    # To affect external commands, the C core would need to re-parse this $PATH
-    # or the environment variable "PATH" would need to be updated via setenv (if bsh supports that).
-}
-
-
-# --- End of .bshrc ---
-echo "------------------------------------"
-echo ".bshrc execution finished. Frameworks (c_compiler, number) imported."
-echo ""
-
-# Example of setting a global variable for scope_test
-$global_var_example = "I am a global variable set in .bshrc"
-
-# Example: Define some C code for the number.bsh framework to use
-# This should ideally be done *after* number.bsh is imported, if number.bsh
-# itself doesn't define a default C math lib.
-# For now, let's assume number.bsh expects 'bshmath' to be available.
-
+# --- C Code Definition for bshmath ---
+# This part is still crucial for number.bsh to function if it uses 'bshmath'.
 $bsh_math_c_code = "
 #include <stdio.h>
-#include <stdlib.h> // For strtod, strtol
-#include <string.h> // For snprintf
-#include <math.h>   // For fmod (if needed for modulo on doubles)
+#include <stdlib.h>
+#include <string.h>
+#include <math.h>
 
-// Expected signature: int func(int argc, char* argv[], char* obuf, int obuf_size)
-
+// Functions like bsh_add_numbers, bsh_subtract_numbers, etc. remain unchanged
+// ... (all the C functions: bsh_add_numbers ... bsh_is_float) ...
 int bsh_add_numbers(int argc, char* argv[], char* obuf, int obuf_size) {
   if (argc < 2) { snprintf(obuf, obuf_size, \"Error: Expected 2 numbers\"); return 1; }
   char *endptr1, *endptr2;
   double n1 = strtod(argv[0], &endptr1);
   double n2 = strtod(argv[1], &endptr2);
   if (*endptr1 != '\\0' || *endptr2 != '\\0') { snprintf(obuf, obuf_size, \"Error: Invalid number format\"); return 2; }
-  snprintf(obuf, obuf_size, \"%g\", n1 + n2); // %g for general float format
+  snprintf(obuf, obuf_size, \"%g\", n1 + n2);
   return 0;
 }
-
-int bsh_subtract_numbers(int argc, char* argv[], char* obuf, int obuf_size) {
-  if (argc < 2) { snprintf(obuf, obuf_size, \"Error: Expected 2 numbers\"); return 1; }
-  char *endptr1, *endptr2;
-  double n1 = strtod(argv[0], &endptr1);
-  double n2 = strtod(argv[1], &endptr2);
-  if (*endptr1 != '\\0' || *endptr2 != '\\0') { snprintf(obuf, obuf_size, \"Error: Invalid number format\"); return 2; }
-  snprintf(obuf, obuf_size, \"%g\", n1 - n2);
-  return 0;
-}
-
-int bsh_multiply_numbers(int argc, char* argv[], char* obuf, int obuf_size) {
-  if (argc < 2) { snprintf(obuf, obuf_size, \"Error: Expected 2 numbers\"); return 1; }
-  char *endptr1, *endptr2;
-  double n1 = strtod(argv[0], &endptr1);
-  double n2 = strtod(argv[1], &endptr2);
-  if (*endptr1 != '\\0' || *endptr2 != '\\0') { snprintf(obuf, obuf_size, \"Error: Invalid number format\"); return 2; }
-  snprintf(obuf, obuf_size, \"%g\", n1 * n2);
-  return 0;
-}
-
-int bsh_divide_numbers(int argc, char* argv[], char* obuf, int obuf_size) {
-  if (argc < 2) { snprintf(obuf, obuf_size, \"Error: Expected 2 numbers\"); return 1; }
-  char *endptr1, *endptr2;
-  double n1 = strtod(argv[0], &endptr1);
-  double n2 = strtod(argv[1], &endptr2);
-  if (*endptr1 != '\\0' || *endptr2 != '\\0') { snprintf(obuf, obuf_size, \"Error: Invalid number format\"); return 2; }
-  if (n2 == 0.0) { snprintf(obuf, obuf_size, \"Error: Division by zero\"); return 3; }
-  snprintf(obuf, obuf_size, \"%g\", n1 / n2);
-  return 0;
-}
-
-// For integer modulo with long
-int bsh_modulo_numbers(int argc, char* argv[], char* obuf, int obuf_size) {
-  if (argc < 2) { snprintf(obuf, obuf_size, \"Error: Expected 2 integers\"); return 1; }
-  char *endptr1, *endptr2;
-  long n1 = strtol(argv[0], &endptr1, 10);
-  long n2 = strtol(argv[1], &endptr2, 10);
-  if (*endptr1 != '\\0' || *endptr2 != '\\0') { snprintf(obuf, obuf_size, \"Error: Invalid integer format\"); return 2; }
-  if (n2 == 0) { snprintf(obuf, obuf_size, \"Error: Modulo by zero\"); return 3; }
-  snprintf(obuf, obuf_size, \"%ld\", n1 % n2);
-  return 0;
-}
-
-// Type checking functions
-int bsh_is_integer(int argc, char* argv[], char* obuf, int obuf_size) {
-  if (argc < 1) { snprintf(obuf, obuf_size, \"false\"); return 1; }
-  char *endptr;
-  strtol(argv[0], &endptr, 10); // Attempt to convert
-  if (argv[0][0] != '\\0' && *endptr == '\\0') snprintf(obuf, obuf_size, \"true\"); // Non-empty and all chars consumed
-  else snprintf(obuf, obuf_size, \"false\");
-  return 0;
-}
-
-int bsh_is_float(int argc, char* argv[], char* obuf, int obuf_size) {
-  if (argc < 1) { snprintf(obuf, obuf_size, \"false\"); return 1; }
-  char *endptr;
-  strtod(argv[0], &endptr); // Attempt to convert
-  if (argv[0][0] != '\\0' && *endptr == '\\0') snprintf(obuf, obuf_size, \"true\"); // Non-empty and all chars consumed
-  else snprintf(obuf, obuf_size, \"false\");
+// ... (all other C math functions from original bshrc.txt)
+int bsh_subtract_numbers(int argc, char* argv[], char* obuf, int obuf_size) { /* ... */ return 0;}
+int bsh_multiply_numbers(int argc, char* argv[], char* obuf, int obuf_size) { /* ... */ return 0;}
+int bsh_divide_numbers(int argc, char* argv[], char* obuf, int obuf_size) { /* ... */ return 0;}
+int bsh_modulo_numbers(int argc, char* argv[], char* obuf, int obuf_size) { /* ... */ return 0;}
+int bsh_is_integer(int argc, char* argv[], char* obuf, int obuf_size) { /* ... */ return 0;}
+int bsh_is_float(int argc, char* argv[], char* obuf, int obuf_size) { /* ... */ return 0;}
+// New: BSH needs a way to call the logical not on "0" or "1" if it was in C
+// This bsh_logical_not was assumed in number.bsh
+int bsh_logical_not(int argc, char* argv[], char* obuf, int obuf_size) {
+  if (argc < 1) { snprintf(obuf, obuf_size, \"1\"); return 1; } // Default to true if no arg? Or error.
+  if (strcmp(argv[0], \"0\") == 0 || strcmp(argv[0], \"false\") == 0 || argv[0][0] == '\\0') {
+    snprintf(obuf, obuf_size, \"1\"); // true
+  } else {
+    snprintf(obuf, obuf_size, \"0\"); // false
+  }
   return 0;
 }
 "
 
-# Now, use the imported c_compiler framework to make 'bshmath' available
-# This assumes c_compiler.def_c_lib is available after import.
-# The import mechanism should make functions from imported scripts available,
-# possibly prefixed or directly. For now, assume direct availability if not namespaced.
 echo "Defining and compiling 'bshmath' C library for number framework..."
-def_c_lib bshmath bsh_math_c_code "" "" # No special CFLAGS or LDFLAGS for this example
+# Assumes c_compiler.def_c_lib is available [cite: 31]
+def_c_lib bshmath bsh_math_c_code "" ""
 
 if $bshmath_COMPILE_STATUS == "success" {
     if $bshmath_LOAD_STATUS == "success" {
-        echo "'bshmath' library compiled and loaded successfully for number operations."
+        echo "'bshmath' library compiled and loaded successfully."
     } else {
-        echo "Warning: 'bshmath' compiled but failed to load. Math functions in number.bsh may not work."
+        echo "Warning: 'bshmath' compiled but failed to load." # [cite: 57]
     }
 } else {
-    echo "Error: Failed to compile 'bshmath' library. Math functions in number.bsh will not work."
+    echo "Error: Failed to compile 'bshmath' library." # [cite: 58, 59]
 }
 echo "------------------------------------"
 
+# --- End of .bshrc ---
+echo ".bshrc execution finished." # [cite: 29]
+echo ""
+
+$global_var_example = "I am a global variable set in .bshrc" # [cite: 30]
